# find-editor.rs

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: editor_info.rs  extra_editor_environment_variables.rs  open.rs
src/: error.rs  lib.rs
src/finder/: mod.rs  open.rs
