[package]
name = "find-editor"
description = "Finds and opens an editor to edit a file. Useful if you want to make it easy for your users to edit config files."
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spenserblack/open-editor.rs"
edition = "2024"
keywords = ["editor", "environment", "command", "cli", "cross-platform"]
exclude = [".editorconfig", ".github", ".gitignore"]
rust-version = "1.85.1"

[features]
default = ["open", "split", "which"]
open = ["split", "which"]
split = ["dep:shell-words"]
which = ["dep:which", "split"]

[dependencies]
shell-words = { version = "1.1", optional = true }
which = { version = "8.0", optional = true }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"

[[example]]
name = "editor_info"
required-features = ["which"]

[[example]]
name = "extra_editor_environment_variables"

[[example]]
name = "open"
required-features = ["open"]
